--- a/report/cover.tex
+++ b/report/cover.tex
@@ -4,11 +4,10 @@
     \rule{1pt}{\textheight}
     \hspace{0.05\textwidth}
     \parbox[b]{0.9\textwidth}{
-            {\Huge\bfseries Plant Monitoring System}\\[\baselineskip]  % Title 
-            {\Large\textit{Embedded Platforms and Communications for IoT}}\\[7\baselineskip] % Subtitle or further description
+            {\Huge\bfseries LoRaWAN communications for a plant monitoring IoT system using the B-L072Z-LRWAN1 ARM mbed-based platform}\\[\baselineskip]  % Title 
+            {\Large\textit{Sensor Networks}}\\[7\baselineskip] % Subtitle or further description
         \vspace{0.45\textheight}
         
-        {\Large Alejandro Botas Bárcena}\\
         {\Large Estela Mora Barba}\\
         \vspace{0.005\textheight}
         
