--- a/report/references.bib
+++ b/report/references.bib
@@ -1,8 +1,32 @@
 %BibtLatex
-@online{CursoEmbeddedPlatforms,
-  title = {Curso: {{Embedded}} Platforms and Communications for Iot | {{MOODLE UPM}} - {{OFICIALES}} 25-26},
-  url = {https://moodle.upm.es/titulaciones/oficiales/course/view.php?id=3568},
+@online{CursoSensorNetworks,
+  title = {Curso: {{Sensor}} Networks | {{MOODLE UPM}} - {{OFICIALES}} 25-26},
+  url = {https://moodle.upm.es/titulaciones/oficiales/course/view.php?id=2211},
+  urldate = {2026-01-04}
+}
+
+@online{ResIOTLoRaWANNetwork2025,
+  title = {{{ResIOT}}® - {{LoRaWAN}}® {{Network Server}} and {{IoT Platform}}},
+  date = {2025-12-20},
+  url = {https://www.resiot.io/en/home/},
+  urldate = {2026-01-04},
+  abstract = {LoRaWAN Network Server and fully programmable IoT Platform for Smart City and Industrial IoT. Sign up for free!},
+  langid = {american},
+  organization = {ResIOT®}
+}
+
+@online{ZephyrAPIDocumentation,
+  title = {Zephyr {{API Documentation}}: {{Introduction}}},
+  url = {https://docs.zephyrproject.org/latest/doxygen/html/index.html},
   urldate = {2025-11-24}
+}
+
+@online{STM32WL55JCProductSTMicroelectronics,
+  title = {{{STM32WL55JC}} | {{Product}} - {{STMicroelectronics}}},
+  url = {https://www.st.com/en/microcontrollers-microprocessors/stm32wl55jc.html},
+  urldate = {2025-12-09},
+  abstract = {The STM32WL55/54xx long-range wireless and ultra-low-power devices embed a powerful and ultra-low-power LPWAN-compliant radio solution, enabling the...},
+  langid = {english}
 }
 
 @online{industriesPhotoTransistorLight,
@@ -54,20 +78,6 @@
   urldate = {2025-11-24},
   abstract = {It\&\#39;s summer and you\&\#39;re sweating and your hair\&\#39;s all frizzy and all you really want to know is why the weatherman said this morning that today\&\#39;s relative humidity would max  ...},
   langid = {american}
-}
-
-@online{ZephyrAPIDocumentation,
-  title = {Zephyr {{API Documentation}}: {{Introduction}}},
-  url = {https://docs.zephyrproject.org/latest/doxygen/html/index.html},
-  urldate = {2025-11-24}
-}
-
-@online{STM32WL55JCProductSTMicroelectronics,
-  title = {{{STM32WL55JC}} | {{Product}} - {{STMicroelectronics}}},
-  url = {https://www.st.com/en/microcontrollers-microprocessors/stm32wl55jc.html},
-  urldate = {2025-12-09},
-  abstract = {The STM32WL55/54xx long-range wireless and ultra-low-power devices embed a powerful and ultra-low-power LPWAN-compliant radio solution, enabling the...},
-  langid = {english}
 }
 
 
