--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -28,6 +28,7 @@
 \newacronym{DMA}{DMA}{Direct Memory Access}
 \newacronym{LPWAN}{LPWAN}{Low-Power Wide-Area Network}
 \newacronym{LoRa}{LoRa}{Long Range}
+\newacronym{LoRaWAN}{LoRaWAN}{Long Range Wide Area Network}
 \newacronym{DAC}{DAC}{Digital-to-Analog Converter}
 \newacronym{SPI}{SPI}{Serial Peripheral Interface}
 \newacronym{RH}{RH}{Relative Humidity}
@@ -43,4 +44,7 @@
 \newacronym{S}{S}{South}
 \newacronym{E}{E}{East}
 \newacronym{W}{W}{West}
+\newacronym{OTAA}{OTAA}{Over-The-Air Activation}
+\newacronym{EUI}{EUI}{Extended Unique Identifier}
+\newacronym{NVS}{NVS}{Non-Volatile Storage}
 
