--- a/report/files/1-Introduction.tex
+++ b/report/files/1-Introduction.tex
@@ -1,81 +1,56 @@
-\section{Overview and Introduction}
+\section{Overview and Introduction} \todo{revisar}
 
 \subsection{Document Overview}
 
-This document defines the technical specifications, development requirements, hardware architecture, software components, and operational modes of the \gls{IoT}-based Plant Monitoring System to be implemented during the course \textit{Embedded Platforms and Communications for IoT}. The objective of this specification is to establish a clear and comprehensive reference for the design, implementation, verification, and assessment of the final embedded system.
+This document defines the technical specifications, development requirements, hardware architecture, software components, and operational modes of the \gls{IoT}-based Plant Monitoring System implemented during the course \textit{Sensor Networks}. The objective of this specification is to establish a clear and comprehensive reference for the design, implementation, and verification of a system that integrates long-range connectivity via \gls{LoRaWAN}.
 
 \subsection{Project Introduction}
 
-The purpose of the final project is to design and implement a fully functional \gls{IoT} platform capable of monitoring the environmental conditions and physiological state of a plant throughout its lifecycle. Such monitoring is essential for applications such as greenhouse automation, precision agriculture, plant health diagnostics, and traceability in plant transportation and storage.
+The main goal of Project 1 is to enable \gls{LoRaWAN} connectivity on an STM32-based \gls{IoT} node running the Zephyr \gls{RTOS}. The system is designed to monitor the environmental conditions and physiological state of a plant throughout its life. This capability is crucial for applications such as high-value species monitoring, greenhouse instrumentation, and logistics traceability where environmental history affects the final market price.
 
-The system must continuously acquire, process, and report multiple physical variables, including temperature, relative humidity, ambient light intensity, soil moisture, and colour characteristics of a plant leaf. Additional inertial data are collected through an accelerometer to detect events such as impacts, falls, tilting, or abnormal movements. The global position of the plant is obtained via a \gls{GPS} module, ensuring timestamped logging of all monitored parameters.
-
-This project integrates both hardware and software development activities. Students must interface several digital and analog sensors, configure low-level peripherals (\gls{I2C}, \gls{UART}, \gls{ADC}, \gls{GPIO}, \gls{PWM}), and implement multitasking using Zephyr \gls{RTOS}. 
-
-The final embedded application must operate in distinct modes, manage periodic measurements, compute statistical parameters, handle event-based notifications, and provide visual feedback via a \gls{RGB} \gls{LED}.
+The system utilizes the on-board radio transceiver of the STM32WL55JC platform to transmit data to a network server. It continuously acquires variables including temperature, humidity, ambient light, soil moisture, and leaf colour. Additionally, a 3-axis accelerometer detects physical impacts or falls, while an external \gls{GPS} module provides precise location data. All parameters are reported periodically through \gls{LoRaWAN} uplinks to the ResIOT \gls{IoT} Platform.
 
 \subsection{Summary of the Work Done}
 
-This section provides a consolidated overview of the work completed throughout the development of the \gls{IoT}-based Plant Monitoring System. The tasks performed encompass the full engineering workflow, including requirement analysis, hardware integration, software design, system implementation, testing, and verification.
+This section provides a consolidated overview of the work completed, which builds upon the sensor management hardware and software developed in the previous subject. The current work focuses on the integration of the \gls{LoRaWAN} stack and cloud-based data visualization.
 
-\subsubsection{Requirements Analysis}
+\subsubsection{\gls{LoRaWAN} Stack Integration and Analysis}
 
-The project began with an in-depth study of the provided technical specifications and sensor documentation. All functional, hardware, and timing requirements were reviewed to establish a clear design baseline. This included understanding the sensing ranges, communication interfaces, and operating constraints imposed by the STM32WL55JC microcontroller and Zephyr \gls{RTOS}.
-
-\subsubsection{Hardware Integration}
-
-The hardware development stage consisted of identifying, wiring, and validating all sensor interfaces:
-
+The initial phase involved the deployment and analysis of the \texttt{zephyr-os-example-\gls{LoRaWAN}} project. Key tasks included:
 \begin{itemize}
-    \item STM32WL55JC microcontroller as the central processing unit.
-    \item Integration of the Si7021 temperature and humidity sensor using the \gls{I2C} bus.
-    \item Connection and calibration of the HW5P-1 phototransistor for ambient light measurement.
-    \item Analog acquisition and scaling of the SEN-13322 soil moisture probe.
-    \item Digital configuration of the TCS34725 colour sensor over \gls{I2C}.
-    \item Setup of the MMA8451Q accelerometer for multi-axis measurements.
-    \item Interfacing and configuring the Adafruit \gls{GPS} module via \gls{UART}.
-    \item Implementation of a \gls{RGB} \gls{LED} driver using \gls{PWM} emulation for status indication.
+    \item Configuration of device identification parameters, including Device \gls{EUI}, Join \gls{EUI}, and Application Key for \gls{OTAA} activation.
+    \item Integration of the \gls{LoRaWAN} stack within the Zephyr \gls{RTOS} environment.
+    \item Verification of network join procedures and uplink transmission through a gateway located at the University Campus.
 \end{itemize}
 
-\subsubsection{Software Development}
+\subsubsection{Application Development and Remote Monitoring}
 
-Software implementation was carried out using Zephyr \gls{RTOS}, structured with a multitasking architecture. Key activities included:
-
+Building on the connectivity baseline, the plant monitoring application was integrated into the \gls{LoRaWAN} communication loop:
 \begin{itemize}
-    \item Configuration of device tree overlays and config options for all peripherals.
-    \item Development of sensor drivers and low-level routines for \gls{ADC}, \gls{I2C}, \gls{UART}, and \gls{GPIO}.
-    \item Design of individual threads for periodic sampling, data processing, \gls{GPS} acquisition, and mode management.
-    \item Implementation of Test Mode, Normal Mode, and optional Advanced Mode according to system requirements.
-    \item Integration of statistical processing to compute hourly mean, minimum, and maximum values.
-    \item Implementation of colour-based alert mechanisms based on out-of-range sensor values.
+    \item Implementation of data acquisition routines for environmental sensors and \gls{GPS} \gls{NMEA} frame parsing.
+    \item Design of a custom LUA payload decoder for the ResIOT network server to process incoming hexadecimal data.
+    \item Creation of a remote dashboard featuring map widgets for real-time tracking and historical data charts for sensor values.
+    \item Development of a downlink command handler to remotely change the \gls{RGB} \gls{LED} colour (OFF, Green, Red) from the ResIOT platform.
 \end{itemize}
 
-Zephyr's logging and shell utilities were used extensively for debugging and validation.
+\subsubsection{Payload Optimization and Efficiency (Phase 3)}
 
-\subsubsection{System Testing and Validation}
-
-The complete system was evaluated across all operational modes:
-
+To maximize data throughput and adhere to the 30-byte message limit, significant optimizations were implemented:
 \begin{itemize}
-    \item Verification of measurement accuracy and stability under Test Mode.
-    \item Long-term monitoring and statistical computation under Normal Mode.
-    \item Correct operation of the mode-switching mechanism through the push button.
-    \item Validation of \gls{RGB} \gls{LED} behaviour for both colour detection and alert signalling.
-    \item \gls{GPS} time synchronization and conversion to local time for timestamp generation.
-    \item Stress testing of the application to identify stack usage limits and race conditions.
+    \item Transition from string-based messaging to a binary-packed structure using an \texttt{\_\_attribute\_\_((packed))} C struct to reduce payload size.
+    \item Conversion of geographical coordinates and sensor values to appropriate data types to minimize byte usage.
+    \item Refinement of the LUA decoder to handle the optimized binary format and update the ResIOT variables accordingly.
 \end{itemize}
 
-All mandatory functionalities were confirmed to meet the specifications, with optional enhancements explored where possible.
+\subsubsection{System Validation}
+
+The complete system was validated through functional assessments:
+\begin{itemize}
+    \item Confirmation of successful \gls{OTAA} joins and stable data transmission intervals.
+    \item Verification of end-to-end data integrity from the physical sensors to the mobile application.
+    \item Testing of the downlink control path for real-time actuator interaction.
+\end{itemize}
 
 \subsubsection{Final Deliverables}
 
-The completed work includes:
-
-\begin{itemize}
-    \item A functional embedded system integrating all sensors and the STM32WL55JC \gls{MCU}.
-    \item Clean, documented source code developed under Zephyr \gls{RTOS}.
-    \item A complete technical report detailing the system design, implementation, and results.
-    \item Final project documentation and code submitted according to course requirements.
-\end{itemize}
-
-Overall, the work conducted demonstrates a full-cycle embedded systems development process, covering hardware, software, real-time processing, testing, and documentation.
+The completed work includes the optimized source code for the STM32WL55JC node, the LUA decoding logic for the network server, and this technical report detailing the implementation of a long-range \gls{IoT} monitoring solution.
